--- a/paper/cfs-model-refs.bib
+++ b/paper/cfs-model-refs.bib
@@ -1,3 +1,182 @@
+@article{helm2017,
+  title={Agriculture after brexit},
+  author={Helm, Dieter},
+  journal={Oxford Review of Economic Policy},
+  volume={33},
+  number={suppl\_1},
+  pages={S124--S133},
+  year={2017},
+  publisher={Oxford University Press UK}
+}
+
+@article{dodorico2014,
+  title={Feeding humanity through global food trade},
+  author={D'Odorico, Paolo and Carr, Joel A and Laio, Francesco and Ridolfi, Luca and Vandoni, Stefano},
+  journal={Earth's Future},
+  volume={2},
+  number={9},
+  pages={458--469},
+  year={2014},
+  publisher={Wiley Online Library}
+}
+
+@misc{normile2019,
+  title={African swine fever marches across much of Asia},
+  author={Normile, Dennis},
+  year={2019},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{kummu2020,
+  title={Interplay of trade and food system resilience: Gains on supply diversity over time at the cost of trade independency},
+  author={Kummu, Matti and Kinnunen, Pekka and Lehikoinen, Elina and Porkka, Miina and Queiroz, Cibele and R{\"o}{\"o}s, Elin and Troell, Max and Weil, Charlotte},
+  journal={Global Food Security},
+  volume={24},
+  pages={100360},
+  year={2020},
+  publisher={Elsevier}
+}
+@article{poppy2019,
+  title={Meeting the demand for meat: analysing meat flows to and from the UK pre and post Brexit},
+  author={Poppy, Guy M and Baverstock, Jenny and Baverstock-Poppy, Joseph},
+  journal={Trends in Food Science \& Technology},
+  volume={86},
+  pages={569--578},
+  year={2019},
+  publisher={Elsevier}
+}
+
+@article{feng2017,
+  title={`Deal' or `no deal'? Impacts of alternative post-Brexit trade agreements on UK agriculture},
+  author={Feng, Siyi and Patton, Myles and Binfield, Julian and Davis, John},
+  journal={EuroChoices},
+  volume={16},
+  number={3},
+  pages={27--33},
+  year={2017},
+  publisher={Wiley Online Library}
+}
+
+@article{power2020,
+  title={How COVID-19 has exposed inequalities in the UK food system: The case of UK food and poverty},
+  author={Power, Madeleine and Doherty, Bob and Pybus, Katie and Pickett, Kate},
+  journal={Emerald Open Research},
+  volume={2},
+  year={2020},
+  publisher={Various}
+}
+
+@article{vermeulen2012,
+  title={Climate change and food systems},
+  author={Vermeulen, Sonja J and Campbell, Bruce M and Ingram, John S},
+  journal={Annual review of environment and resources},
+  volume={37},
+  year={2012}
+}
+
+@article{ingram2011,
+  title={A food systems approach to researching food security and its interactions with global environmental change},
+  author={Ingram, John S},
+  journal={Food Security},
+  volume={3},
+  number={4},
+  pages={417--431},
+  year={2011},
+  publisher={Springer}
+}
+
+@article{ericksen2008,
+  title={Conceptualizing food systems for global environmental change research},
+  author={Ericksen, Polly J},
+  journal={Global environmental change},
+  volume={18},
+  number={1},
+  pages={234--245},
+  year={2008},
+  publisher={Elsevier}
+}
+
+@misc{AHDBexports2020,
+  title={{UK pig meat exports show strong growth in July}},
+  year={2020},
+  author={{Agricultural and Horticultural Development Board}},
+  shortauthor={{AHDB}},
+  howpublished={\url{https://ahdb.org.uk/news/uk-pig-meat-exports-show-strong-growth-in-july}},
+  note = {Accessed: 2020-10-13}
+}
+
+@article{mason2020,
+  title={Modelling the global economic consequences of a major African swine fever outbreak in China},
+  author={Mason-D'Croz, Daniel and Bogard, Jessica R and Herrero, Mario and Robinson, Sherman and Sulser, Timothy B and Wiebe, Keith and Willenbockel, Dirk and Godfray, H Charles J},
+  journal={Nature Food},
+  volume={1},
+  number={4},
+  pages={221--228},
+  year={2020},
+  publisher={Nature Publishing Group}
+}
+
+@article{scheffer2001,
+  title={Catastrophic shifts in ecosystems},
+  author={Scheffer, Marten and Carpenter, Steve and Foley, Jonathan A and Folke, Carl and Walker, Brian},
+  journal={Nature},
+  volume={413},
+  number={6856},
+  pages={591--596},
+  year={2001},
+  publisher={Nature Publishing Group UK}
+}
+
+@article{sole1996,
+  title={Phase transitions and complex systems: Simple, nonlinear models capture complex systems at the edge of chaos},
+  author={Sol{\'e}, Ricard V and Manrubia Cuevas, Susanna and Luque, Bartolo and Delgado, Jordi and Bascompte, Jordi},
+  year={1996},
+  publisher={John Wiley \& Sons}
+}
+
+
+@book{duggan2016,
+  title={System dynamics modeling with R},
+  author={Duggan, Jim},
+  year={2016},
+  publisher={Springer}
+}
+
+@article{robinson2015,
+  title={The international model for policy analysis of agricultural commodities and trade (IMPACT): model description for version 3},
+  author={Robinson, Sherman and Mason-D'Croz, Daniel and Sulser, Timothy and Islam, Shahnila and Robertson, Ricky and Zhu, Tingju and Gueneau, Arthur and Pitois, Gauthier and Rosegrant, Mark W},
+  year={2015},
+  publisher={IFPRI Discussion Paper 1483}
+}
+
+@article{shmueli2010,
+  title={To explain or to predict?},
+  author={Shmueli, Galit and others},
+  journal={Statistical Science},
+  volume={25},
+  number={3},
+  pages={289--310},
+  year={2010},
+  publisher={Institute of Mathematical Statistics}
+}
+
+@misc{DEFRA2019auk18,
+  title={{Agriculture in the United Kingdom 2018}},
+  shortauthor={{DEFRA}},
+  author={Department for Environment, Food and Rural Affairs},
+  year={2019},
+  publisher={Deparment for Environment Food and Rural Affairs (DEFRA)}
+}
+
+@article{james2020,
+  title={Geodemographic Patterns of Meat Expenditure in Great Britain},
+  author={James, William HM and Lomax, Nik and Birkin, Mark and Collins, Lisa M},
+  journal={Applied Spatial Analysis and Policy},
+  pages={1--28},
+  year={2020},
+  publisher={Springer}
+}
+
 @Manual{rcoreteam2020,
     title = {R: A Language and Environment for Statistical Computing},
     author = {{R Core Team}},
@@ -423,6 +602,7 @@
 @misc{AHDBeuroexhange2015,
   title = {{How does the exchange rate affect the GB pig price?}},
   author = {Agricultural and Horticultural Development Board},
+  shortauthor={{AHDB}},
   year = {2015},
   howpublished = {\url{https://pork.ahdb.org.uk/prices-stats/news/2015/august/how-does-the-exchange-rate-affect-the-gb-pig-price/}},
   note = {Accessed: 2020-07-08}
@@ -431,18 +611,21 @@
 @misc{IME2013,
   title = {{Global food. Waste not, want not.}},
   author = {Institute of Mechanical Engineers},
+  shortauthor={{IME}},
   year = {2013}
 }
 
 @misc{AHDBpocketbook2018,
   title = {{Pig Pocketbook - 2018}},
-  author = {AHDB},
+  author = {Agricultural and Horticultural Development Board},
+  shortauthor={{AHDB}},
   year = {2018}
 }
 
 @misc{AHDBherdnumbers2020,
   title = {{UK pig numbers and holdings}},
-  author = {AHDB},
+  author = {Agricultural and Horticultural Development Board},
+  shortauthor={{AHDB}},
   year = {2020},
   howpublished = {\url{https://ahdb.org.uk/pork/uk-pig-numbers-and-holdings}},
   note = {Accessed: 2020-07-08}
@@ -450,7 +633,8 @@
 
 @misc{AHDBpigmeatrade,
   title = {{Pig meat trade}},
-  author = {AHDB},
+  author = {Agricultural and Horticultural Development Board},
+  shortauthor={{AHDB}},
   year = {2020},
   howpublished = {\url{https://ahdb.org.uk/pork/pig-meat-trade}},
   note = {Accessed: 2020-08-24}
@@ -459,15 +643,17 @@
 @misc{DEFRAlivestockprices,
   title = {{Livestock prices, finished and store}},
   year = {2020},
-  author = {DEFRA},
-  howpublished = {\url{https://www.gov.uk/government/statistics/cattle-sheep-and-pig-slaughter}},
+  author = {Department for Environment, Food and Rural Affairs},
+  shortauthor={{DEFRA}},
+  howpublished = {\url{https://www.gov.uk/government/statistical-data-sets/livestock-prices-finished-and-store}},
   note = {Accessed: 2020-08-24}
 }
 
 @misc{DEFRAlivestocknumbers,
   title = {{Livestock numbers in England and the UK}},
   year = {2020},
-  author = {DEFRA},
+  author = {Department for Environment, Food and Rural Affairs},
+  shortauthor={{DEFRA}},
   howpublished = {\url{https://www.gov.uk/government/statistical-data-sets/structure-of-the-livestock-industry-in-england-at-december}},
   note = {Accessed: 2020-08-24}
 }
@@ -475,7 +661,8 @@
 @misc{DEFRApigcattlestats2020,
   title = {{Latest cattle, sheep and pig slaughter statistics}},
   year = {2020},
-  author = {DEFRA},
+  author = {Department for Environment, Food and Rural Affairs},
+  shortauthor={{DEFRA}},
   howpublished = {\url{https://www.gov.uk/government/statistics/cattle-sheep-and-pig-slaughter}},
   note = {Accessed: 2020-08-24}
 }
@@ -614,6 +801,7 @@
 @techreport{BPEXprofitability2011,
   title = {{Profitability in the pig supply chain}},
   author = {British Pig Executive},
+  shortauthor={{BPEX}},
   year = {2011}
 }
 
