--- a/paper/cfs-model-suppl_mat.tex
+++ b/paper/cfs-model-suppl_mat.tex
@@ -43,15 +43,27 @@
 
 \usepackage[textfont=it, labelfont=bf]{caption}
 
-\title{A model of national-level food system security:\\ supplementary material}
+\title{A mathematical model of national-level food system sustainability}
 \author[1]{Conor Goold}
-\affil[1]{Faculty of Biological Sciences, University of Leeds, LS2 9JT, UK}
+\author[2]{Simone Pfuderer}
+\author[3]{William H. M. James}
+\author[3]{Nik Lomax}
+\author[4]{Fiona Smith}
+\author[1]{Lisa M. Collins}
+\affil[1]{\small{Faculty of Biological Sciences, University of Leeds, LS2 9JT, UK}}
+\affil[2]{School of Agriculture, Policy and Development, University of Reading, Reading, RG6 6AR, UK}
+\affil[3]{School of Geography and Leeds Institute for Data Analytics, University of Leeds, LS2 9JT, UK}
+\affil[4]{School of Law, University of Leeds, LS2 9JT, UK}
 \date{}
 
 \begin{document}
 \linenumbers
 \modulolinenumbers[5]
 
-\section{Linear stability analysis}
+\section{Non-dimensionalisation}
+
+\section{Stability analysis of unsustainable production equilibrium}
+
+\section{Differences between equilibria}
 
 \end{document}
