--- a/paper/cfs-model-manuscript.tex
+++ b/paper/cfs-model-manuscript.tex
@@ -80,7 +80,7 @@ Our food system model is composed of coupled ordinary differential equations, wi
 \begin{figure}[t!]
   \centering
   \includegraphics[scale=1]{figure_1.pdf}
-  \caption{The general structure of the theoretical complex food system model. Blue circles denote the the four state variables (capital, inventory, demand and price). Solid arrows indicate the different flows into and out of each state variable comprising their rate of change, and the arrow labels display generic functions of the model state variables and parameters. Dashed arrows show dependencies between different state variables and flows.}
+  \caption{The general structure of the theoretical complex food system model. Blue circles denote the the four state variables (capital, inventory, demand and price). Solid arrows indicate the different flows into and out of each state variable comprising their rate of change, and the arrow labels display generic functions of the model state variables and parameters (see Table \ref{t_symbols} for the specific definitions used in this model). Dashed arrows show dependencies between different state variables and flows.}
   \label{fig_cfs}
 \end{figure}
 
@@ -91,7 +91,7 @@ Capital changes according to the equation:
   \label{eq_capital}
 \end{equation}
 %
-with initial condition at $t = 0$, $C_0$. The parameter $a$ is the rate of capital change (increase or decrease) depending on the price to capital production cost ($b$) ratio. Captial depreciates at a per-capital rate $e$, which can be interpreted as the inverse of the per-capita average life-time of capital.
+with initial condition at $t = 0$, $C_0$. The parameter $a$ is the rate of capital change (increase or decrease) depending on the price to capital production cost ($b$) ratio. Captial depreciates at a per-capital rate $e$, where $e^{-1}$ is the per-capita average life-time of capital.
 
 Inventory changes according to:
 %
@@ -299,7 +299,7 @@ By using the Routh-Hurwitz conditions, the sign of the remaning eigenvalues' rea
   \text{critical ratio} = \frac{ \alpha (\omega + \frac{\gamma}{2})}{\kappa \gamma(1+\beta)} < 1
 \end{equation}
 %
-The dependence of this critical ratio to changes in the original parameter values is shown in Figure \ref{figure2}a. The numerator represents the reference profitability of capital production ($\alpha$; Table \ref{t_nd_symbols}), positively weighted by the size of the commodity market, where either higher rates of waste or capital production, or greater reference coverage, increases the market demand for the commodity (Figure \ref{figure2}a). The denominator represents the strength of international trade ($\kappa$), weighted against the viability of domestic capital: if the capital production rate increases, or capital depreciation rate decreases, the denominator becomes smaller, serving to increase the critical ratio.
+The dependence of this critical ratio to changes in the original parameter values is shown in Figure \ref{figure2}a. The numerator represents a weighting of three factors: $i)$ the \textit{reference profitability} of capital production ($\alpha$; Table \ref{t_nd_symbols}), $ii)$ the \textit{need for new commodity}, where either higher rates of waste or greater reference coverage increases the critical ratio, and $ii)$ the \textit{speed of capital production}, where higher rates ($a$ in Table \ref{t_symbols}) increases the critical ratio (Figure \ref{figure2}a). By contrast, the denominator represents the \textit{total strength} of international trade, which is composed of the trade strength parameter ($\kappa$), weighted by the viability of domestic capital: if the capital production rate increases, or capital depreciation rate decreases, the total trade strength becomes smaller, serving to increase the critical ratio.
 
 \begin{figure}[t!]
   \begin{subfigure}{0.5\textwidth}
@@ -322,7 +322,7 @@ The dependence of this critical ratio to changes in the original parameter value
   \label{figure2}
 \end{figure}
 
-When the critical ratio exceeds 1, the sustainable domestic production equilibrium is given by $\{\frac{2 \gamma \kappa (- 1 - \beta) + \alpha (\gamma + 2 \omega)}{2 \delta (1+\beta)(1 - \kappa) }, \frac{\alpha}{1 + \beta}, \frac{\alpha}{1 + \beta}, \frac{1 + \beta}{\alpha}\}$. In the latter case, the equilibrium values of inventory, demand and price are the same as the equilibrium values of the model without international trade (see above), determined by the profitability of the domestic industry and the ratio of capital depreciation and growth rates. However, equilibrium inventory and demand are lower, and equilibrium price is higher, than when domestic supply is unsustainable. For example, the conditions for equilibrium price when domestic supply is unsustainable to be higher than when domestic supply is sustainable is exactly the critical ratio (see supplementary materials). The latter trends are also seen the closer a system becomes to the critical ratio. Thus, while international trade in the short term increases inventory levels, decreases the coverage (see model description) and, therefore, decreases the price and increases demand, the long-term result of the unsustainable domestic production regime is higher prices, lower demand and lower inventory levels.
+When the critical ratio exceeds 1, the sustainable domestic production equilibrium is given by $\{\frac{2 \gamma \kappa (- 1 - \beta) + \alpha (\gamma + 2 \omega)}{2 \delta (1+\beta)(1 - \kappa) }, \frac{\alpha}{1 + \beta}, \frac{\alpha}{1 + \beta}, \frac{1 + \beta}{\alpha}\}$. In the latter case, the equilibrium values of inventory, demand and price are the same as the equilibrium values of the model without international trade (see above), determined by the profitability of the domestic industry and the ratio of capital depreciation and growth rates. However, equilibrium inventory and demand are lower, and equilibrium price is higher, than when domestic supply is unsustainable. For example, the conditions for equilibrium price when domestic supply is unsustainable to be higher than when domestic supply is sustainable (i.e. $\frac{\omega + \frac{\gamma}{2}}{\kappa \gamma} > \frac{1 + \beta}{\alpha}$) is exactly the critical ratio. The latter trends are also seen the closer a system becomes to the critical ratio. Thus, while international trade in the short term increases inventory levels, decreases the coverage (see model description) and, therefore, decreases the price and increases demand, the long-term result of the unsustainable domestic production regime is higher prices, lower demand and lower inventory levels.
 
 The equilibrium value of capital is similar to the equilibrium value found in the model without international trade, but now factors in trade strength, $\kappa$ (both equilibria are equal when $\kappa = 0$). Specifically, whether $\kappa$ has a positive or negative influence on the long-term sustainable equilibrium domestic capital depends on whether the system is characterised by net imports (domestic supply is less than reference demand) or net exports (domestic supply exceeds reference demand), i.e. whether $\frac{\gamma}{\delta} - \hat{v}$ in equation \ref{dimensionless_inventory} is greater than or less than zero. If domestic supply is less than reference demand, and the critical ratio exceeds 1, increasing trade strength will reduce the equilibrium value of capital in the long term limit (i.e. as $\tau \rightarrow \infty$), but if domestic supply exceeds reference demand, increasing trade strength will increase the equilibrium capital due to a greater ability to export surplus product. From the previous inequality, we can define the surplus ratio, which signals that domestic supply will be greater than reference demand (net exports) if:
 
@@ -387,13 +387,13 @@ Posterior predictions (Figure \ref{fig_posterior_predictions}) reflect the most 
 \end{figure}
 
 \section{Discussion}
-This paper has presented a theoretical model of a complex food system that balances analytical tractability and realism. The model represents the functioning of a national food system including international trade, and we have shown that the sustainability of the domestic industry depends on a critical compound parameter that comprises a balance between the profitability of the domestic industry (represented by the reference price to cost of capital production ratio), the rate of domestic capital depreciation relative to its growth rate, and the strength of international trade (Figure \ref{figure2}a). The unsustainable domestic supply regime is characterised by complete reliance on imports, an results in higher asymptotic commodity prices, lower inventory and lower customer demand. By estimating the key parameters of this ratio from data on real food systems, the sustainability of the industry, conditional on the assumptions of the model, can be evaluated.
+This paper has presented a theoretical model of a complex food system that balances analytical tractability and realism. The model represents the functioning of a national food system including international trade, and we have shown that the sustainability of the domestic industry depends on a critical compound parameter that comprises the profitability of the domestic industry (the reference price to cost of capital production ratio), the need for new commodity (commodity waste rates and reference coverage), the ability to produce new capital (captial growth and depreciation rates), and the strength of international trade (see Figure \ref{figure2}a). Below unity, this critical ratio signals that international trade outcompetes the domestic industry and the model enters an unsustainable domestic supply regime characterised by complete reliance on imports. This unsustainable regime also results in higher equilibrium commodity prices, lower inventory and lower customer demand than when domestic supply is sustainable. By estimating the key parameters of this ratio from data on real food systems, the sustainability of domestic industries, conditional on the assumptions of the model, can be evaluated.
 
-Within the sustainable regime of the model, a key factor determining the long-term behaviour of the food system depends on whether it is characterised by net imports or net exports. In the context of the mathematical model, this is represented by whether the nation produces enough food to meet the reference demand ($h$ in Table \ref{t_symbols}). We find that a food system that must supplement domestic supply with imports in order to meet demand (a net importer) is more vulnerable to collapse because increasing trade potential (higher $k$ values) results in reduced self-sufficiency. Food systems that produce a surplus of domestic commodity can benefit from increased trade potential by exporting more (Figure \ref{figure2}). Rapid globalisation has meant that 23\% of the food produced globally, and 26\% of global calorie production, is traded (\cite{dodorico2014}; \cite{tu2019}; \cite{poppy2019}), and the majority of the world's diet is partly dependent on food imports (\cite{kummu2020}) with several countries not producing enough food to satisfy basic, per-capita caloric intake (\cite{dodorico2014}). While global food trade has led to, and encourages further, diversification of diets, it has also led to a less resilient global food system. This is because most countries in the trade network rely on imports from a smaller number of dominant, trade partners (\cite{kummu2020}), results supported also by theoretical modelling (\cite{tu2019}). The model here supports this general picture at the national food system level, and provides a critical boundary where a nation's food system may become entirely dependent on imports, leading to higher commodity prices, lower customer demand and lower overall inventory levels. By the same token, complete self-sufficiency is an unrealistic and potentially harmful goal where the food system is again only reliant on a single supply chain (\cite{helm2017}).
+Within the sustainable regime of the model, a key factor determining the long-term behaviour of the food system depends on whether it is characterised by net imports or net exports. In the context of the mathematical model, this is represented by whether the nation produces enough food to meet the reference demand ($h$ in Table \ref{t_symbols}). We find that a food system that must supplement domestic supply with imports in order to meet demand (a net importer) is more vulnerable to collapse because increasing trade potential (higher $k$ values) results in reduced self-sufficiency. Food systems that produce a surplus of domestic commodity can benefit from increased trade potential by exporting more (Figure \ref{figure2}), assuming that export markets are always available. This supports the current literature on the importance of diversifying food commodity sources to ensure food system resilience. Rapid globalisation has meant that 23\% of the food produced globally, and 26\% of global calorie production, is traded (\cite{dodorico2014}; \cite{tu2019}; \cite{poppy2019}), and the majority of the world's diet is partly dependent on food imports (\cite{kummu2020}) with several countries not producing enough food to satisfy basic, per-capita caloric intake (\cite{dodorico2014}). While global food trade has led to, and encourages further, diversification of diets, it has also led to a less resilient global food system. This is because most countries in the trade network rely on imports from a smaller number of dominant, trade partners (\cite{kummu2020}), results supported also by theoretical modelling (\cite{tu2019}). The model here provides a critical boundary where a nation's food system may become entirely dependent on imports, leading to higher commodity prices, lower customer demand and lower overall inventory levels. By the same token, complete self-sufficiency is an unrealistic and potentially harmful goal where the food system is again only reliant on a single supply chain (\cite{helm2017}).
 
-Application of our model to 2015-2019 data from the UK pork industry demonstrated that the industry is in the sustainable model regime during this time period, where the critical ratio is credibly above 1 (Table \ref{table_parameter_estimates}). While the UK pork industry has diminished in size over the last 20 years (by around 50\% since the late 1990s) its current level of self-sufficiency is around 60-65\% and its export market continues to grow due to lower production levels of the Chinese pork industry (e.g. \cite{AHDBexports2020}). The results from our model support this state of the industry: the `trade strength' parameter ($\kappa$), which represents the proportion of the difference between reference demand levels and domestic production that can be traded, was estimated between 35 and 37\%. Crucially, the critical value of $\kappa$ that would tip the UK industry into collaspe is estimated to be 61\%, with a 95\% highest density interval between 56 and 65\%. The UK food system faces a number of challenges in the coming years, including the impact of no-deal Brexit on trade tariffs allowing retailers easier access to cheaper imported meat (\cite{feng2017}), the continuing Covid-19 pandemic on the production and processing efficiency of food commodities (\cite{power2020}), increasing popularity of reduced-meat or vegetarian, vegan and plant-based diets on UK meat demand (\cite{james2020}), and the potential for an African Swine Fever epidemic in the pig herd (\cite{normile2019}; \cite{mason2020}). While under some scenarios, such as a bespoke Brexit trade deal with the EU, the price of pig meat might increase (\cite{feng2017}), representing a boost to domestic producers, our model indicates that this result is also consistent with a food system becoming closer to the critical boundary delineating collapse (i.e. there is a negative relationship between long term price and the critical ratio) and, thus, might not be an advantage to the food system as a whole.
+Application of our model to 2015-2019 data from the UK pork industry demonstrated that the industry is in the sustainable model regime, with the critical ratio estimated credibly above 1 (Table \ref{table_parameter_estimates}). While the UK pork industry has diminished in size over the last 20 years (by around 50\% since the late 1990s) its current level of self-sufficiency is around 60-65\% and its export market continues to grow due to lower production levels of the Chinese pork industry (e.g. \cite{AHDBexports2020}). The results from our model support this state of the industry: the `trade strength' parameter ($\kappa$), which represents the proportion of the difference between reference demand levels and domestic production that can be traded, was estimated between 35 and 37\%. Crucially, the critical value of $\kappa$ that would tip the UK industry into collaspe is estimated to be 61\%, with a 95\% highest density interval between 56 and 65\%, suggesting if self-sufficiency drops below 50\%, the industry will be closely approaching unsustainability. The UK food system faces a number of challenges in the coming years, including the impact of no-deal Brexit on trade tariffs allowing retailers easier access to cheaper imported meat (\cite{feng2017}), the continuing Covid-19 pandemic on the production and processing efficiency of food commodities (\cite{power2020}), increasing popularity of reduced-meat or vegetarian, vegan and plant-based diets on UK meat demand (\cite{james2020}), and the potential for an African Swine Fever epidemic in the pig herd (\cite{normile2019}; \cite{mason2020}). While under some scenarios, such as a bespoke Brexit trade deal with the EU, the price of pig meat might increase (\cite{feng2017}), representing a boost to domestic producers, our model indicates that this result is also consistent with a food system becoming closer to the critical boundary delineating collapse (i.e. there is a negative relationship between long term price and the critical ratio) and, thus, might not be an advantage to the food system as a whole.
 
-The mechanisms encoded in the model presented here are simple relative to the multi-factorial functioning of real food systems (\cite{ericksen2008}; \cite{ingram2011}). For instance, we have assumed that commodity prices respond only to changes in the supply-demand balance and not extenal factors such as global commodity prices and costs of production. Moreover, the model assumes that international trade responds only to the difference between reference demand and domestic production, and that exports of domestic produce are always available, ignoring how government regulations of trade flows may disrupt this scenario (e.g. pigmeat that is treated with ractopomine might fail government import regulations). Our specification that domestic capital changes proportional to the commodity price--production cost ratio (\cite{sterman2000}) ignores heterogeneity in the structure of food supply chains. While similar assumptions have been used to build more complex system dynamics models (e.g. \cite{meadows1971}; \cite{sterman2000}), there is great scope for expanding our system of differential equations to reveal the impact of, for instance, dis-aggregated actors of the supply chain (e.g. breeding pigs versus slaughter pigs, producers versus processors), the causal effects of non-finanical drivers (e.g. preserving pig health and welfare) on supply chain functioning, heterogeneity in the production, demand and trade of different product types (e.g. fresh pork versus bacon and sausages), or how external factors, such as the climate, will influence production and demand (\cite{vermeulen2012}). Nonetheless, our model provides a description of a single food system supported by both past theoretical and empirical work, and thus offers key insights into the conditions the sustainability of a domestic food industry as well as a baseline from which to build more realistic theoretical models of complex food systems.
+The mechanisms encoded in the model presented here are simple relative to the multi-factorial functioning of real food systems (\cite{ericksen2008}; \cite{ingram2011}). For instance, we have assumed that commodity prices respond only to changes in the supply-demand balance and not extenal factors such as global commodity prices and costs of production. Moreover, the model assumes that international trade responds only to the difference between reference demand and domestic production, and that exports of domestic produce are always available, ignoring how government regulations of trade flows may disrupt this scenario (e.g. pigmeat that is treated with ractopomine might fail government import regulations). Our specification that domestic capital changes proportional to the commodity price--production cost ratio (\cite{sterman2000}) ignores heterogeneity in the structure of food supply chains. While similar assumptions have been used to build more complex system dynamics models (e.g. \cite{meadows1971}; \cite{sterman2000}), there is great scope for expanding our system of differential equations to reveal the impact of, for instance, dis-aggregated actors of the supply chain (e.g. breeding pigs versus slaughter pigs, producers versus processors), the causal effects of non-finanical drivers (e.g. preserving pig health and welfare) on supply chain functioning, heterogeneity in the production, demand and trade of different product types (e.g. fresh pork versus bacon and sausages), or how external factors, such as the climate, will influence production and demand (\cite{vermeulen2012}). Nonetheless, our model provides a description of a single food system supported by both past theoretical and empirical work, and thus offers key insights into the conditions that promote sustainability of domestic food industries.
 
 \iffalse
 Quantitative modelling, including mathematical and statistical models, can be used to explain or predict behaviours of complex systems (\cite{shmueli2010}). For example, the International Model for Policy Analysis of Agricultural Commodities and Trade (IMPACT; \cite{robinson2015}) is a multimarket, partial equlibirum model used for scenario analysis and planning of future food production, demand, supply and economic outcomes (e.g. see \cite{springmann2018}) for 62 commodities across 159 countries. While scenario analysis are not predictions of what \textit{will} happen based on past experience (\cite{robinson2015}; \cite{duggan2016}), models such as IMPACT are more specialised in making realistic projections conditional on possible outcomes of food systems, rather than insights into the causal drivers of complex systems. Models than explain complex systems, in contrast, elucidate the relationships between a considerably smaller set of state variables sufficient to capture the system's dynamics. For instance, stylised mathematical models of brain networks, animal collectives, ecosytems and cellular dynamics have been used to find the critical points at which these systems show abrupt qualitative changes in their behaviours (\cite{sole1996}; \cite{scheffer2001}), making them integral components of theory development and hypothesis formation. Food systems research has, in general, lacked these foundational models, although recent work has based theoretical insights on the sustainability and resilience of food systems using stylised mathematical models (\cite{suweis2015}; \cite{tu2019}).
